<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="15dp"
    android:paddingHorizontal="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/filterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        android:text="@string/filter_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterTitle"
        android:text="@string/start_date"/>

    <TextView
        android:id="@+id/startDateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/startDate"
        app:layout_constraintBottom_toBottomOf="@id/startDate"
        app:layout_constraintStart_toEndOf="@id/startDate"
        android:padding="15dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/click_to_pick"/>

    <TextView
        android:id="@+id/endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startDateValue"
        android:text="@string/end_date"/>

    <TextView
        android:id="@+id/endDateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/endDate"
        app:layout_constraintBottom_toBottomOf="@id/endDate"
        app:layout_constraintStart_toEndOf="@id/startDate"
        android:padding="15dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/click_to_pick"/>

    <Button
        android:id="@+id/applyFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/endDateValue"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/apply_filter"
        android:layout_marginHorizontal="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>